--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,6 @@
+@import './Icons';
+
+@import './Commponents/Caption/Caption';
 @import './Commponents/Button/Button';
+@import './Commponents/Input/Input';
+@import './Commponents/FormItem/FormItem';
