--- a/src/Commponents/Caption/Caption.scss
+++ b/src/Commponents/Caption/Caption.scss
@@ -1,10 +1,26 @@
 .waveuiCaption {
-  display: block;
+  display: inline-flex;
   margin: 0;
   color: var(--waveui--color--foreground);
   font-family: var(--waveui-font_caption--font-family);
   font-weight: var(--waveui-font_caption--font-weight);
   font-size: var(--waveui-font_caption--font-size);
+  cursor: default;
+
+  &_center {
+    justify-content: center;
+    text-align: center;
+  }
+
+  &_left {
+    justify-content: start;
+    text-align: start;
+  }
+
+  &_right {
+    justify-content: end;
+    text-align: end;
+  }
 
   &_small {
     font-size: var(--waveui-font_caption--font-size-sm);
