--- a/src/Commponents/Input/Input.scss
+++ b/src/Commponents/Input/Input.scss
@@ -2,10 +2,10 @@
   display: flex;
   position: relative;
   border-radius: var(--waveui-size_input--border-radius);
-  transition: box-shadow .2s ease-out;
+  transition: box-shadow .2s ease-out, border .2s ease-out;
 
   &:focus-within {
-    box-shadow: inset 0 0 0 1px #ffffff0a;
+    box-shadow: 0 0 0 1px #ffffff10;
   }
 
   &_primary {
@@ -45,11 +45,16 @@
     display: block;
     width: 100%;
     background: transparent;
+    color: var(--waveui--color--foreground);
     border: none;
     line-height: var(--waveui-size_input--line-height);
-    color: var(--waveui--color--foreground);
     padding-top: var(--waveui-size_input--padding);
     padding-bottom: var(--waveui-size_input--padding);
+  }
+
+  &__input:-webkit-autofill {
+    background: transparent;
+    color: var(--waveui--color--foreground);
   }
 
   &__input_with-padding-left {
@@ -81,6 +86,11 @@
   }
 
   &_secondary &__input::placeholder {
+    color: var(--waveui--color--placeholder--secondary)
+  }
+
+  &_secondary &__input:-webkit-autofill::placeholder {
+    background: transparent;
     color: var(--waveui--color--placeholder--secondary)
   }
 
