--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,18 @@
 @import './Icons';
 
 @import 'Components/Caption/Caption';
+@import 'Components/Subhead/Subhead';
 @import 'Components/Headline/Headline';
 @import 'Components/Divider/Divider';
+@import 'Components/Pulsar/Pulsar';
 @import 'Components/Button/Button';
 @import 'Components/Input/Input';
 @import 'Components/FormItem/FormItem';
 @import 'Components/Logo/Logo';
 @import 'Components/ImageButton/ImageButton';
 @import 'Components/ImageInput/ImageInput';
+@import 'Components/ImageCard/ImageCard';
+@import 'Components/Track/Track';
 
 *:focus {
   outline: solid 1px #ffffff10;
