--- a/src/Icons/index.scss
+++ b/src/Icons/index.scss
@@ -2,9 +2,11 @@
   height: auto;
   width: auto;
   display: flex;
+  fill: currentColor;
 
   & svg {
     height: 100%;
     width: 100%;
+    pointer-events: none;
   }
 }
