add horizontal scroll area

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@
 @import 'Components/ImageInput/ImageInput';
 @import 'Components/ImageCard/ImageCard';
 @import 'Components/Track/Track';
+@import 'Components/HorizontalScroll/HorizontalScroll';
 
 *:focus {
   outline: solid 1px #ffffff10;
