--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,8 @@
 @import 'Components/ImageCard/ImageCard';
 @import 'Components/Track/Track';
 @import 'Components/HorizontalScroll/HorizontalScroll';
+@import 'Components/Menu/Menu';
+@import 'Components/Menu/MenuItem/MenuItem';
 
 *:focus {
   outline: solid 1px #ffffff10;
