--- a/src/tokens/default-dark.css
+++ b/src/tokens/default-dark.css
@@ -105,3 +105,17 @@
     --waveui-size_menu-item--width--accessory: 45px;
     --waveui-size_menu--border-radius: 5px;
 }
+
+
+*::-webkit-scrollbar {
+    width: 0.20rem;
+}
+
+*::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0);
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #BEB7DF;
+    border-radius: 3px;
+}
