--- a/src/tokens/default-dark.css
+++ b/src/tokens/default-dark.css
@@ -108,14 +108,17 @@
 
 
 *::-webkit-scrollbar {
-    width: 0.20rem;
+    width: 3px;
+    position: absolute;
+    right: 0;
+    background: transparent;
 }
 
 *::-webkit-scrollbar-track {
-    background: rgba(0, 0, 0, 0);
+    background: transparent;
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: #BEB7DF;
+    background-color: #BEB7DF10;
     border-radius: 3px;
 }
