add modal displayer

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,8 @@
 @import 'Components/Menu/Menu';
 @import 'Components/Menu/MenuItem/MenuItem';
 
+@import 'Accessory/ModalDisplayer/ModalDisplayer';
+
 *:focus {
   outline: solid 1px #ffffff10;
 }
