--- a/src/Components/Track/Track.scss
+++ b/src/Components/Track/Track.scss
@@ -77,6 +77,16 @@
     position: relative;
   }
 
+  &__menu__clickable {
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+  &__menu__clickable:focus {
+    outline: none;
+  }
+
   &__menu:focus {
     outline: none;
   }
