--- a/src/Components/Track/Track.scss
+++ b/src/Components/Track/Track.scss
@@ -13,7 +13,7 @@
   transition: color 0.2s ease-out;
   cursor: pointer;
 
-  &:hover, &_playing {
+  &:hover, &_playing, &_paused {
     color: var(--waveui--color--foreground);
   }
 
@@ -23,7 +23,7 @@
     flex-direction: column;
     align-items: center;
     color: inherit;
-    width: 20px;
+    min-width: 20px;
     cursor: inherit;
   }
 
@@ -48,6 +48,9 @@
     gap: 3px;
     align-items: start;
     flex-grow: 1;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   &__artist {
@@ -56,6 +59,7 @@
 
   &__like {
     height: 17px;
+    min-width: 17px;
     transition: fill 0.3s ease-out;
   }
 
@@ -72,7 +76,7 @@
   }
 
   &__menu {
-    width: 20px;
+    min-width: 20px;
     height: 100%;
     position: relative;
   }
