--- a/src/Components/Logo/Logo.scss
+++ b/src/Components/Logo/Logo.scss
@@ -35,6 +35,7 @@
 
   &__icon {
     height: var(--waveui-font_logo--font-size);
+    width: var(--waveui-font_logo--font-size);
     transition: height .2s ease-out;
   }
 
